# WRF-SUEWS

./: .gitignore  .gitmodules  CLAUDE.md  README.md  claude-response-2.md  codex-analysis.md  conductor.json  pyproject.toml  test_coupling.sh
.github/workflows/: test-coupling.yml
WSPS/sample-case/input/spin_ups/Swindon/: RunControl.nml
WSPS/sample-case/input/spin_ups/Swindon/Input/: SUEWS_Conductance.txt  SUEWS_SiteSelect.txt
coupling-automator/: Makefile  Makefile.lib  README.md  automate_main.py  gen_suewsdrv.py  module_sf_suews.F  patch_configure.py  suews_dts_mapping.md
dev-notes/: 2025-11-21.md
dev-refs/: CI-CD.md  GIT_WORKFLOW.md  QUICKSTART.md  SUEWS-PRECOMPILED-LIBRARY-STRATEGY.md  TESTING.md  WRF-SUEWS-coupling-notes.md
docs/: CI-IMPLEMENTATION.md  progress-2025-11-21.md
docs/source/: Doxyfile
notebooks/: suews_quarter_demo.ipynb
