[project]
name = "wrf-suews"
version = "1.0.0"
description = "Coupled WRF-SUEWS model for urban climate simulation"
readme = "README.md"
requires-python = ">=3.9,<3.15"
license = { text = "GPL-3.0" }

dependencies = [
    "geopandas>=0.14.0",
    "geoplot>=0.5.0",
    "pandas>=1.4,<2.0",
    "astral>=3.0",
    "xarray>=2023.0.0",
    "h5netcdf>=1.2.0",
    "psutil>=5.9.0",
    "netcdf4>=1.6.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "dask>=2023.0.0",
    "descartes>=1.1.0",
    "rtree>=1.0.0",
    "mapclassify>=2.5.0",
    "contextily>=1.3.0",
    "pygeos>=0.14.0",
    "sphinx>=7.0.0",
    "nbsphinx>=0.9.0",
    "recommonmark>=0.7.0",
    "wrf-python>=1.3.0",
    "scikit-image>=0.21.0",
    "black>=23.0.0",
    "exhale>=0.3.0",
    "salem>=0.3.0",
    "supy>=2023.0.0",
    "urlpath>=1.2.0",
    "multiprocess>=0.70.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ["py313"]
